recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: value :- is not a member of Int
		tree(steps:-1, shrink*length, angle, shrink)
                          ^