recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
steps match {
case 0 => avance(length)
case _ => avance(length)
		droite(angle)
		tree(steps:-1, shrink*length, angle, shrink)
		gauche(2.*angle)
		tree(steps-1, shrink*length, angle, shrink)
		droite(angle)
}
}
